fix: fixed alignment issue on mobile devoces for buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ section {
     color: #f7f9fb;
     border: 1px black solid;
     border-radius: 5px;
-    margin: 3rem;
+    margin-top: 3rem;
     margin-bottom: 0;
     min-height: 3rem;
     padding: 1rem;
